# strands-orchestrator-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
orchestrator-agent-backend/content_production/: .dockerignore  .env.example  README.md  agent.py  main.py  pyproject.toml
orchestrator-agent-backend/content_production/agents/: __init__.py  analyst_agent.py  research_agent.py  writer_agent.py
orchestrator-agent-backend/customer_support/: .env.example  Dockerfile  README.md  agent.py  config.py  main.py  pyproject.toml
orchestrator-agent-backend/customer_support/agents/: __init__.py  escalation_agent.py  faq_agent.py  triage_agent.py
orchestrator-agent-backend/travel_planner/: .env.example  Dockerfile  README.md  agent.py  main.py  pyproject.toml
orchestrator-agent-backend/travel_planner/agents/: __init__.py  destination_researcher.py  product_recommender.py  trip_planner.py
orchestrator-agent-frontend/: .dockerignore  Dockerfile  README.md  angular.json  package-lock.json  package.json
orchestrator-agent-frontend/src/: index.html  styles.css
orchestrator-agent-frontend/src/app/: app.routes.ts  app.spec.ts
orchestrator-agent-frontend/src/app/components/agent-selector/: agent-selector.css  agent-selector.html  agent-selector.ts
orchestrator-agent-frontend/src/app/components/chat/: chat.css  chat.html  chat.ts
orchestrator-agent-frontend/src/app/models/: agent.model.ts
orchestrator-agent-frontend/src/app/services/: agent.service.ts
orchestrator-agent-frontend/src/environments/: environment.ts
